# eurorust-derive

./: .gitignore  Cargo.toml  EuroRust Presentation.pptx  README.md
eurorust-derive-macro/: Cargo.toml
eurorust-derive-macro/src/: lib.rs
localstack/: localstack_setup.sh
src/: main.rs
